--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'YOUR_MEASUREMENT_ID');
+        gtag('config', 'G-2PLKV01XMD');
     </script>
 </head>
 <body>
