--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Indian's Desi Social Media"/>
     
     <!-- SEO Meta Tags -->
+    <meta name="msvalidate.01" content="7B465082148D3137D9637EFDF8129F5F" />
     <meta name="robots" content="index, follow"/>
     <meta name="googlebot" content="index, follow"/>
     <meta name="revisit-after" content="7 days"/>
