--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="ProTec Games"/>
-    <meta name="keywords" content="social media, Indian, Desi, Datagram, moments, login, Indian Social Media, ProTec Games, Social Media"/>
+    <meta name="keywords" content="social media, Indian, Desi, Datagram, moments, login, chat platform, share posts, make new friends, random friends, global chat, group making, community building, online networking, user-generated content, interactive platform, connect with people, real-time communication, ProTec Games"/>
     <meta name="description" content="Indian's Desi Social Media"/>
     
     <!-- SEO Meta Tags -->
