--- a/user/index.html
+++ b/user/index.html
@@ -15,5 +15,7 @@
     <script src="../data/js/userState.js"></script>
     <script type="module" src="../data/js/authState.js"></script>
     <script type="module" src="./js/script.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2PLKV01XMD"></script>
+    
 </body>
 </html>
