--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -18,6 +18,7 @@
     <script src="../data/helper/popup/popup.js"></script>
     <script type="module" src="../data/js/authState.js"></script>
     <script type="module" src="./js/script.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2PLKV01XMD"></script>
     <script type='text/javascript' src='//pl21911426.toprevenuegate.com/cd/13/50/cd1350d64bb561bc32543777cef54a21.js'></script>
 </body>
 </html>
