--- a/group/setting/index.html
+++ b/group/setting/index.html
@@ -17,5 +17,6 @@
     <script src="../../data/helper/popup/popup.js"></script>
     <script type="module" src="../../data/js/authState.js"></script>
     <script type="module" src="./js/script.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2PLKV01XMD"></script>
 </body>
 </html>
