--- a/login/index.html
+++ b/login/index.html
@@ -15,5 +15,6 @@
     <script src="../data/js/userState.js"></script>
     <script src="../data/helper/popup/popup.js"></script>
     <script type="module" src="./js/script.js"></script>
-</body>
+    
+</body><script async src="https://www.googletagmanager.com/gtag/js?id=G-2PLKV01XMD"></script>
 </html>
