--- a/group/create/index.html
+++ b/group/create/index.html
@@ -2,6 +2,7 @@
 <html lang="id"/>
 <head>
     <meta charset="UTF-8"/>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2PLKV01XMD"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="../../data/css/default.css"/>
