--- a/login/index.html
+++ b/login/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../data/css/default.css"/>
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="stylesheet" href="../data/helper/popup/popup.css"/>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2PLKV01XMD"></script>
     <title>Login</title>
 </head>
 <body>
@@ -16,5 +17,5 @@
     <script src="../data/helper/popup/popup.js"></script>
     <script type="module" src="./js/script.js"></script>
     
-</body><script async src="https://www.googletagmanager.com/gtag/js?id=G-2PLKV01XMD"></script>
+</body>
 </html>
