--- a/chat/index.html
+++ b/chat/index.html
@@ -22,5 +22,15 @@
     <script type="module" src="../data/js/authState.js"></script>
     <script type="module" src="./js/script.js"></script>
     
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '50e4ec35b336e2ea1f0ce31bcb0b55ee',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/50e4ec35b336e2ea1f0ce31bcb0b55ee/invoke.js"></scr' + 'ipt>');
+</script>
 </body>
 </html>
